--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
         <div class="row">
             <div id="chart-area"></div>
+            <div id="buildings"></div>
         </div>
     </div>
 
