--- a/gapminder.html
+++ b/gapminder.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -13,23 +14,24 @@
 <body>
     <nav class="navbar navbar-default">
         <div class="container">
-            <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png"></a>      
+            <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png"></a>
         </div>
     </nav>
 
     <!-- Bootstrap grid setup -->
     <div class="container">
         <div class="row">
-            <div id="chart-area"></div>  
+            <div id="chart-area"></div>
         </div>
     </div>
 
-<!-- External JS libraries -->
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/d3.min.js"></script>
-<!-- Custom JS -->
-<script src="js/main.js"></script>
+    <!-- External JS libraries -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/d3.min.js"></script>
+    <!-- Custom JS -->
+    <script src="js/gapminder.js"></script>
 
 </body>
+
 </html>
